--- a/client/src/app/components/blog/blog.component.css
+++ b/client/src/app/components/blog/blog.component.css
@@ -56,6 +56,14 @@ button.close{
 	padding: .12rem .25rem;
 }
 
+.btn-upvote{
+	color: #006700;
+}
+
+.btn-downvote{
+	color: #9a0000;
+}
+
 .btn-nobg{
 	cursor: pointer;
 	background: none;
@@ -76,10 +84,19 @@ button.close{
 	margin: 0 auto 15px auto;
 }
 
+.card-title{
+	font-weight: 600;
+	font-size: 1.0rem;
+}
+
 .card-body{
 	padding: 1rem !important;
 	overflow-y: scroll;
 	max-height: 28rem;
+}
+
+.card-text{
+	font-size: 0.92rem;
 }
 
 .card-body::-webkit-scrollbar {
