--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~quill/dist/quill.core.css';
+@import '~quill/dist/quill.snow.css';
+
+.ql-toolbar {
+    border: none !important;
+}
+
+.ql-container {
+	margin-top: 5px;
+	border-radius: .25rem;
+	border-top: 1px solid #ccc !important;
+	background-color: #fff;
+}
+
 * {
 	transition: 0.2s;
 }
@@ -17,9 +31,9 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #000;
-	opacity: 0.4;
+	background-color: rgba(0, 0, 0, 0.4);
 	z-index: 1050;
+	backdrop-filter: blur(2px);
 }
 
 .btn-primary:disabled, .btn-info:disabled{
