--- a/client/src/app/components/blog/blog.component.html
+++ b/client/src/app/components/blog/blog.component.html
@@ -74,7 +74,7 @@
 			<div class="modal-header">
 				<h5 class="modal-title">Confirm discard</h5>
 				<button type="button" name="button" class="close" data-dismiss="modal"
-					(click)="goBack()">&times;</button>
+					(click)="closeDiscardBlogPopup()">&times;</button>
 			</div>
 			<div class="modal-body">
 				<p>Are you sure to discard this blog? Changes will be lost. You
