--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,42 +1,51 @@
-<nav id="nav-header" class="navbar navbar-expand-md navbar-light fixed-top">
-    <div class="container" [ngClass]="{'nav-border' : !isRootActive()}">
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" routerLink="/">
-      	<div class="temp-logo-font">Blog</div>
-      </a>
-      
-      <div class="collapse navbar-collapse" id="navbarCollapse">
+<nav [ngClass]="{'display-none': !displayNavbar}" id="nav-header"
+  class="navbar navbar-expand-md navbar-light fixed-top">
+  <div class="container" [ngClass]="{'nav-border' : !isRootActive()}">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" routerLink="/">
+      <div class="temp-logo-font">Blog</div>
+    </a>
+
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+          <a class="nav-link" routerLink="/">Home<span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+      <div class="form-inline mt-2 mt-md-0">
+        <!-- set navbar-right -->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-            <a class="nav-link" routerLink="/">Home<span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-        <div class="form-inline mt-2 mt-md-0"> <!-- set navbar-right -->
-          <ul class="navbar-nav mr-auto">
-          <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+          <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']"
+            [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" routerLink="/dashboard">Dashboard</a>
           </li>
-          <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+          <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']"
+            [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" routerLink="/profile">Profile</a>
           </li>
-          <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+          <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']"
+            [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" routerLink="/blog">Blog</a>
           </li>
-          <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+          <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']"
+            [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" routerLink="/register">Register</a>
           </li>
-          <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-          <a class="nav-link" routerLink="/login">Login</a>
+          <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']"
+            [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link" routerLink="/login">Login</a>
           </li>
-          <li *ngIf="authService.loggedIn()" class="nav-item"><a class="nav-link" (click)="onLogoutClick()">Logout</a></li>
+          <li *ngIf="authService.loggedIn()" class="nav-item"><a class="nav-link" (click)="onLogoutClick()">Logout</a>
+          </li>
         </ul>
-          <!-- <div class="input-group">
+        <!-- <div class="input-group">
 		    <span class="input-group-addon" id="basic-addon1"><i class="fa fa-search" aria-hidden="true"></i></span>
 			<input type="text" class="form-control" placeholder="search" aria-describedby="basic-addon1">
 		  </div> -->
-        </div>
       </div>
     </div>
+  </div>
 </nav>
