--- a/client/src/app/components/blog/edit-blog/edit-blog.component.css
+++ b/client/src/app/components/blog/edit-blog/edit-blog.component.css
@@ -1,3 +1,12 @@
+.view-container {
+	max-width: 800px;
+	margin: auto;
+}
+
+.view-offset {
+	margin-top: -60px;
+}
+
 .btn-sm{
 	padding: .12rem .25rem;
 }
@@ -54,3 +63,12 @@
 	font-size: 0.92rem;
 }
 
+input[name="title"]:disabled {
+	border: none;
+	font-size: 3rem;
+	letter-spacing: 1px;
+}
+
+.title-view input {
+	background-color: #f8f8fe;
+}
