--- a/client/src/app/modules/quill-editor/quill-editor/quill-editor.component.html
+++ b/client/src/app/modules/quill-editor/quill-editor/quill-editor.component.html
@@ -1,6 +1,6 @@
 <div id="editor"
-    [ngClass]="{'ql-valid': isContentValid && isContentDirty, 'ql-invalid': !isContentValid && isContentDirty}">
+    [ngClass]="{'ql-valid': isContentValid && isContentDirty && isEditing, 'ql-invalid': !isContentValid && isContentDirty && isEditing}">
 </div>
 
-<span class="ql-counter">{{ blogLength-1 || 0 }} / 50000</span>
+<span *ngIf="isEditing" class="ql-counter">{{ blogLength-1 || 0 }} / 50000</span>
 <!-- Value: {{ blogContent | json }} -->
