update a proper selector for blog title view style

--- a/client/src/app/components/blog/edit-blog/edit-blog.component.css
+++ b/client/src/app/components/blog/edit-blog/edit-blog.component.css
@@ -59,7 +59,7 @@
 	font-size: 0.92rem;
 }
 
-input[name="title"]:disabled {
+.title-view input[name="title"] {
 	border: none;
 	font-size: 2.5rem;
 	letter-spacing: 1px;
