update screen flow, press blog title to enter view and edfit page

--- a/client/src/app/components/blog/blog.component.css
+++ b/client/src/app/components/blog/blog.component.css
@@ -84,6 +84,11 @@ button.close{
 	margin: 0 auto 15px auto;
 }
 
+.card-title-box{
+	display: inline-block;
+	cursor: pointer;
+}
+
 .card-title{
 	font-weight: 600;
 	font-size: 1.0rem;
