--- a/client/src/app/components/blog/blog.component.html
+++ b/client/src/app/components/blog/blog.component.html
@@ -133,7 +133,9 @@
 <div *ngIf="!newPost && !loadingBlogs">
 	<div id="{{ blog._id }}" class="card" *ngFor="let blog of blogPosts">
 		<div class="card-body">
-			<h5 class="card-title">{{ blog.title }}</h5>
+			<div [routerLink]="['/blog/', blog._id]" class="card-title-box">
+				<h5 class="card-title">{{ blog.title }}</h5>
+			</div>
 			<!-- <p class="card-text">{{ blog.body }}</p> -->
 			<p class="card-text"><span [innerHTML]="blog.body"></span></p>
 		</div>
@@ -182,11 +184,11 @@
 				class="btn btn-sm btn-nobg" *ngIf="authService.loggedIn()" (click)="draftComment(blog._id)">
 				<span class="fa fa-comments-o"></span>Comment</button>
 			<span *ngIf="authService.loggedIn() && username === blog.createdBy">
-				<a [routerLink]="['/blog/', blog._id]"><button type="button" name="button"
-						class="btn btn-sm btn-nobg"><span class="fa fa-pencil"></span></button></a>
+				<!-- <a [routerLink]="['/blog/', blog._id]"><button type="button" name="button"
+						class="btn btn-sm btn-nobg"><span class="fa fa-pencil"></span></button></a> -->
 				<!-- <a [routerLink]="['/delete-blog/', blog._id]"><button type="button" name="button" class="btn btn-sm btn-nobg"><span class="fa fa-trash-o"></span></button></a> -->
-				<a (click)="deleteBlogPopup(blog)"><button type="button" name="button" class="btn btn-sm btn-nobg"><span
-							class="fa fa-trash-o"></span></button></a>
+				<!-- <a (click)="deleteBlogPopup(blog)"><button type="button" name="button" class="btn btn-sm btn-nobg"><span
+							class="fa fa-trash-o"></span></button></a> -->
 			</span>
 			<button style="padding-right: 0" type="button" name="button" class="btn btn-sm btn-nobg"
 				*ngIf="enabledComments.indexOf(blog._id) === -1 && blog.comments.length > 0"
