fix blog view page title dispaly, fix editor to fix height for better toolbar display, fix go back to view blog page navbar display

--- a/client/src/app/components/blog/edit-blog/edit-blog.component.css
+++ b/client/src/app/components/blog/edit-blog/edit-blog.component.css
@@ -59,6 +59,12 @@
 	font-size: 0.92rem;
 }
 
+.title-view {
+	font-size: 2rem;
+	font-weight: 600;
+	letter-spacing: 1px;
+}
+
 .title-view input[name="title"] {
 	border: none;
 	font-size: 2.5rem;
