--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -35,6 +35,14 @@
 	border-top: 1px solid #ccc;
 }
 
+.ql-editor p {
+	font-size: 1.17em;
+}
+
+.ql-editor h1,h2,h3,h4,h5,h6,p {
+	line-height: 1.6;
+}
+
 * {
 	transition: 0.2s;
 }
@@ -43,8 +51,10 @@ div:focus {
   outline: 0;
 }
 
-#editor {
+.editmode #editor {
 	transition: none !important;
+	max-height: 500px;
+	overflow-y: auto;
 }
 
 body {
